<resources>
    <string name="app_name">Operaciones Basicas</string>
    <string name="txt_nun1">Primer Valor</string>
    <string name="txt_nun2">Segundo Valor</string>
    <string name="tv_resultado">Resultado</string>
    <string name="rb_suma">SUMAR</string>
    <string name="rb_resta">RESTAR</string>
    <string name="rb_multiplicacion">MULTIPLICAR</string>
    <string name="rb_dividir">DIVIDIR</string>
    <string name="botton">CALCULAR</string>

</resources>
